# fortress-rollback

./: .cursorrules  .dockerignore  .gitattributes  .gitignore  .lychee.toml  .markdown-link-check.json  .markdownlint.json  .pre-commit-config.yaml  .secrets.baseline  .typos.toml  .vale.ini  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Cross.toml  LICENSE  MIGRATION.md  PLAN.md  README.md  clippy.toml  codecov.yml  deny.toml  formal-methods-amazon.md  llms.txt  mkdocs.yml  package-lock.json  release-state.json  requirements-docs.txt  rustfmt.toml  tla-summary-standalone.md
.cargo/: config.toml  mutants.toml
.config/: nextest.toml  spellcheck.toml
.devcontainer/: Dockerfile  README.md  codex-bootstrap.sh  devcontainer-lock.json  devcontainer.json  setup-tla-tools.sh  welcome.sh
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  dependabot.yml  labeler.yml
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  config.yml  feature_request.yml
.github/rulesets/: main-protection.json
.github/workflows/: benchmark.yml  ci-agent-skills.yml  ci-benchmarks.yml  ci-changelog.yml  ci-coverage.yml  ci-docs.yml  ci-lint.yml  ci-llm-lint.yml  ci-mutation.yml  ci-network-nightly.yml  ci-network.yml  ci-quality.yml  ci-release-state.yml  ci-rust.yml  ci-safety.yml  ci-security.yml  ci-simulation-nightly.yml  ci-verification.yml  ci-version-sync.yml  coverage.yml  dependabot-auto-merge.yml  devcontainer-build.yml  docs-deploy.yml  docs.yml  labeler.yml  publish.yml  release-prepare.yml  rust.yml  sync-issue-template.yml  wiki-sync.yml
.llm/: context.md
.llm/design-history/: README.md  network.txt  release.txt  sync-layer.txt
.llm/skills/: _index.md  async-rust-best-practices.md  async-rust.md  changelog-practices.md  changelog.md  ci-cd-debugging.md  ci-debugging.md  clippy-configuration.md  clippy-lints-guide.md  code-review-lessons.md  collection-determinism.md  concurrency-patterns.md  concurrency.md  crate-publishing-guide.md  cross-platform-ci-cd.md  cross-platform-games.md  cross-platform-rust.md  cross-platform.md  defensive-programming.md  dependency-management.md  determinism-guide.md  determinism.md  deterministic-simulation-testing.md  documentation-code-consistency.md  dst.md  ffi.md  floating-point-determinism.md  fuzzing.md  github-actions-best-practices.md  github-actions.md  github-wiki-sync.md  high-performance-rust.md  kani-verification.md  kani.md  loom-testing.md  loom.md  markdown-formatting.md  markdown-link-validation.md  markdown.md  miri-adaptation-guide.md  (+43 more)
.llm/templates/: ask-user-question.md
bench/: data.js
bench-informational/: data.js
benches/: compression.rs  h16p_mesh.rs  input_queue.rs  p2p_session.rs  sync_layer.rs
docker/: Dockerfile  README.md  docker-compose.yml  entrypoint.sh
docs/: ARCHITECTURE.md  README.md  USER_GUIDE.md  architecture.md  changelog-new.md  changelog.md  code-of-conduct.md  contributing.md  desync-playbook.md  fortress-vs-ggrs.md  ggrs-changelog-archive.md  index.md  migration.md  plan.md  production-checklist.md  reconnect-playbook.md  release.md  replay.md  telemetry.md  threat-model.md  tlaplus-tooling-research.md  tuning.md  user-guide.md
examples/: README.md  configuration.rs  custom_socket.rs  error_handling.rs  request_handling.rs  sync_test.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_compression.rs  fuzz_input_queue.rs  fuzz_input_queue_direct.rs  fuzz_message_parsing.rs  fuzz_protocol_input_packet.rs  fuzz_replay_decode.rs  fuzz_rle.rs  fuzz_session_config.rs  fuzz_sync_layer_direct.rs
loom-tests/: Cargo.toml  README.md
loom-tests/tests/: loom_game_state_cell.rs  loom_saved_states.rs  loom_telemetry.rs
progress/: session-001-spectator-host-kill.md  session-144-release-lock-synchronization.md  session-145-release-publish-reliability.md
proptest-regressions/: input_queue.txt  rle.txt  rng.txt
scripts/: cargo_linker.py  check-cargo-hack.py  check-code-fence-syntax.sh  check-kani-coverage.py  check-kani-coverage.sh  check-links.py  check-links.sh  check-llm-skills.sh  check-rustdoc-links.py  check-shell-portability.sh  check-tools.sh  check-wiki-consistency.py  docker-network-tests.sh  install-hooks.sh  pre-commit  pre-commit.py  run-cargo-clippy.py  run-cargo-fmt.py  sync-version.sh  sync-wiki.py  test-verify-sccache.sh  validate-wiki-output.py  verify-all.sh  verify-kani.sh  verify-markdown-code.sh  verify-sccache.sh  verify-tla.sh
specs/: API_CONTRACTS.md  DETERMINISM_MODEL.md  FORMAL_SPEC.md  SPEC_DIVERGENCES.md
src/: checksum.rs  error.rs  frame_info.rs  hash.rs  input_queue.rs  lib.rs  metrics.rs  prelude.rs  proof_vec.rs  replay.rs  rle.rs  rng.rs  sync.rs  sync_layer.rs  telemetry.rs  test_config.rs  time_sync.rs
supply-chain/: config.toml
tests/: README.md  config.rs  loom_concurrency.rs  network.rs  sessions.rs  simulation.rs  stubs.rs  stubs_enum.rs  test_config.rs  test_determinism.rs  test_internal_invariants.rs  test_internal_property.rs  test_multi_process_network.rs  test_network_resilience.rs  test_p2p_session.rs  test_p2p_session_enum.rs  test_p2p_spectator_session.rs  test_synctest_session.rs  test_synctest_session_enum.rs  test_z3_verification.rs  verification.rs
tests/godot-emscripten/: .gitignore  Cargo.toml  browser.spec.mjs  package-lock.json  package.json  playwright.config.mjs  run.sh  rust-toolchain.toml
tests/godot-emscripten/.cargo/: config.toml
tests/godot-emscripten/godot/: export_presets.cfg  main.gd  main.gd.uid  main.tscn  probe.gdextension  probe.gdextension.uid  project.godot
tests/godot-emscripten/src/: lib.rs
tests/network-peer/: Cargo.toml
tests/network-peer/src/: main.rs
wiki/: API-Contracts.md  Architecture.md  Changelog.md  Code-of-Conduct.md  Contributing.md  Desync-Playbook.md  Determinism-Model.md  Formal-Specification.md  Fortress-vs-GGRS.md  GGRS-Changelog-Archive.md  Home.md  Migration.md  Overview.md  Production-Checklist.md  Reconnect-Playbook.md  Replay.md  Spec-Divergences.md  TLAplus-Tooling-Research.md  Telemetry.md  Threat-Model.md  Tuning.md  User-Guide.md  _Sidebar.md
(+415 files in other folders)
