[package]
name = "fortress-rollback"
version = "0.1.0"
authors = ["wallstop <wallstop@wallstopstudios.com>"]
edition = "2021"
description = "Fortress Rollback (a fork of GGRS) is a fortified, verified P2P rollback networking library for Rust."
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/wallstop/fortress-rollback"
keywords = ["gamedev", "networking", "ggpo", "rollback"]
categories = ["network-programming", "game-development"]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(kani)', 'cfg(loom)'] }

# Defensive programming clippy lints
# Reference: https://corrode.dev/blog/defensive-programming/
[lints.clippy]
# Ensure all public API methods that return values have #[must_use]
must_use_candidate = "warn"
# Catch fallible From implementations that should be TryFrom
fallible_impl_from = "deny"
# Make clone() calls explicit for readability
implicit_clone = "warn"
# Remove unnecessary clone() calls
redundant_clone = "warn"
# Use to_owned() for &str instead of to_string() for clarity
inefficient_to_string = "warn"
# Note: wildcard_enum_match_arm is NOT enabled because public enums use #[non_exhaustive],
# which already forces external users to handle wildcards. Internal test code uses wildcards
# intentionally for internal enums like MessageBody.

[features]
sync-send = []
wasm-bindgen = []
# Enable runtime invariant checking in release builds (for debugging production issues)
paranoid = []
# Enable loom-compatible synchronization primitives for concurrency testing
# NOTE: This changes the internal sync primitives from parking_lot to std/loom
loom = []
# Enable Z3 formal verification tests (slow to compile - builds Z3 from source)
z3-verification = ["dep:z3"]
# Enable graphical examples (ex_game_*) - requires system audio/graphics libraries
# On Linux: sudo apt-get install libasound2-dev libx11-dev libxi-dev libgl1-mesa-dev
graphical-examples = ["dep:macroquad"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
parking_lot = "0.12"
web-time = "1.1"
tracing = "0.1"
# SMT solver for formal verification (builds Z3 from source - SLOW)
# Only compiled when z3-verification feature is enabled
z3 = { version = "0.19", features = ["bundled"], optional = true }
# Graphical examples dependency (requires system audio/graphics libraries)
# On Linux: sudo apt-get install libasound2-dev libx11-dev libxi-dev libgl1-mesa-dev
macroquad = { version = "=0.3.25", features = ["log-rs"], optional = true }

# Loom for concurrency testing - only used when cfg(loom) is set
[target.'cfg(loom)'.dependencies]
loom = "0.7"

[target.'cfg(target_arch = "wasm32")'.dependencies]
js-sys = "0.3"

[dev-dependencies]
serial_test = "3.2"
clap = { version = "4.5", features = ["derive"] }
tracing-subscriber = "0.3"
tracing-log = "0.2"
proptest = "=1.4.0"
# Benchmarking
criterion = { version = "0.5", features = ["html_reports"] }
# Additional testing utilities
arbitrary = { version = "1.3", features = ["derive"] }

# Network test peer binary for multi-process testing
[[bin]]
name = "network_test_peer"
path = "tests/bin/network_test_peer.rs"
test = false
bench = false

# Examples
[[example]]
name = "ex_game_p2p"
path = "examples/ex_game/ex_game_p2p.rs"
required-features = ["graphical-examples"]

[[example]]
name = "ex_game_spectator"
path = "examples/ex_game/ex_game_spectator.rs"
required-features = ["graphical-examples"]

[[example]]
name = "ex_game_synctest"
path = "examples/ex_game/ex_game_synctest.rs"
required-features = ["graphical-examples"]

# Benchmarks (using criterion)
[[bench]]
name = "input_queue"
harness = false

[[bench]]
name = "sync_layer"
harness = false

[[bench]]
name = "p2p_session"
harness = false

# Profile for benchmarks
[profile.bench]
debug = true

# Loom concurrency tests - isolated from other dev-deps
[[test]]
name = "loom_concurrency"
path = "tests/loom_concurrency.rs"
required-features = []             # No features required, but only runs under cfg(loom)
