[package]
name = "fortress-rollback-loom-tests"
version = "0.1.0"
edition = "2021"
publish = false

# This is intentionally a standalone crate, not part of the main workspace.
# Loom requires special RUSTFLAGS="--cfg loom" that would break the main build.
[workspace]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(loom)'] }

# Minimal dependencies - just fortress-rollback and loom
[dependencies]
fortress-rollback = { path = ".." }

[dev-dependencies]
loom = "0.7"

# This crate only exists for loom testing
[[test]]
name = "loom_game_state_cell"
path = "tests/loom_game_state_cell.rs"

[[test]]
name = "loom_saved_states"
path = "tests/loom_saved_states.rs"

[[test]]
name = "loom_telemetry"
path = "tests/loom_telemetry.rs"
