[package]
name = "network-test-peer"
version = "0.1.0"
edition = "2021"
publish = false
description = "Headless network test peer for multi-process testing of fortress-rollback"

# This is an internal test tool, not published to crates.io
# It exists as a separate crate to avoid forcing Cargo.lock inclusion
# in the main fortress-rollback crate (binaries force Cargo.lock inclusion)

[lints.clippy]
# Allow print macros for test output and error reporting. This headless peer
# writes its JSON results and diagnostics to stdout/stderr by contract, so the
# print-family lints (including the workspace-wide `disallowed-macros` rule from
# the root `clippy.toml`) are intentionally permitted for this internal tool.
print_stdout = "allow"
print_stderr = "allow"
disallowed_macros = "allow"

[features]
# Forward the hot-join feature to fortress-rollback so this peer's exhaustive
# FortressEvent match stays in sync with the variants the linked crate exposes.
hot-join = ["fortress-rollback/hot-join"]

[dependencies]
fortress-rollback = { path = "../.." }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[[bin]]
name = "network_test_peer"
path = "src/main.rs"
